Networkpolicy/03/default-deny-all_1.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: pqr
spec:
  podSelector:
    matchLabels:
  policyTypes:
    - Ingress
  ingress: []
